[package]
name = "datafusion-catalog-listing"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
datafusion-catalog = { workspace = true }
